# TNA-RAXO

./: .env.example  .gitignore  README.md  README_original.md  config.yaml  download_checkpoints.sh  models_setup.sh  pipeline.py  pyproject.toml  run_baselines.sh  run_method_database_branch_v2.sh  run_method_web_branch_v2.sh  sam_config.yaml  setup_sam3d.sh  setup_sam3d_uv.sh  visualize.py
raxo/: build_hrchy.py  build_prototypes_ours.py  build_prototypes_web.py  build_prototypes_with_masks_prop.py  cocoapi_2.py  dataset.py  final_cocoapi.py  final_cocoapi_std.py  google_image_retrievalv2.py  grounding_dino_inference.py  llmcontrollers.py  main_with_masks_prop.py  metrics.py  obtain_cat_colours_v3.py  obtain_masks.py  obtain_masks_res_inference.py  sam3d_blender_pipeline.py  style_transfer_v2.py  uncertanty_estimation_fixed.py  utils.py  utils2.py
raxo2/: proposal.py
raxo2/processors/: __init__.py  blender.py  google.py  sam3d.py
results/: web_branch_llm_direct.txt
tests/: test_googleflow.py
