[project]
name = "RAXO"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.2.0",
    "google-images-search>=1.4.0",
    "bpy==4.4",
    "fake-bpy-module>=20251003",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "nltk>=3.9.2",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pycocotools>=2.0.10",
    "python-dotenv>=1.2.1",
    "rf-groundingdino>=0.3.0",
    "sam-2",
    "supervision>=0.27.0",
    "tabulate>=0.9.0",
    "tidecv>=1.0.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.36.0",  # Override old transformers from rf-groundingdino (provides pre-built tokenizers)
    "wandb>=0.23.0",
    "weave>=0.52.17",
    # SAM-3D-Objects dependencies
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "segment-anything>=1.0",
    "pyyaml>=6.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
sam3d = [
    # These require CUDA toolkit (nvcc) to build from source
    # Install via: uv pip install --no-build-isolation mamba-ssm causal-conv1d
    # after ensuring CUDA toolkit is available
    "packaging>=23.0",
]

[tool.uv.sources]
sam-2 = { path = "../sam2" }

[tool.uv.extra-build-dependencies]
groundingdino-py = ["torch"]
